--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
   <title>HTML5</title>
  </head>
  <body>
-  <p>Привет, мир</p>
+
+  <div class="container">
+    <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">форма для добавления RSS-потока </label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">форма для добавления RSS-потока </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Добавить</button>
+      </form>
+  </div>
+
  </body>
 </html>
