--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                          <div class="row">
                              <div class="col">
                                  <div class="form-floating">
-                                    <input id="url-input" required class="form-control w-100" autofocus name="url" placeholder="ссылка RSS">
+                                    <input id="url-input" aria-label="url" required class="form-control w-100" autofocus name="url" placeholder="ссылка RSS">
                                     <label for="url-input" class="form-label">форма для добавления RSS-потока </label>
                                  </div>
                              </div>
